--- a/mlops-training/mlops_course.ipynb
+++ b/mlops-training/mlops_course.ipynb
@@ -41,7 +41,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "userid = <USERID>"
+        "userid = <USERID> # e.g. userid = \"user3\""
       ]
     },
     {
@@ -69,6 +69,7 @@
         "\n",
         "1. Log in to the Artifactory training instance here: https://mlops17234464260.jfrog.io/\n",
         "2. From the projects dropdown list, select your project (\"mlops-userx\")\n",
+        "![](https://drive.google.com/uc?id=1U8vtNVB01E3xK2dGIAe0oyxNEnPRA8-d)\n",
         "3. Navigate to *Administration --> Repositories*.\n",
         "4. Click 'Create a Repository' and select *Remote*. Then, select *HuggingFaceML* .\n",
         "5. On the next page, you only need to provide the *Repository Key* (the repo name)  **The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-remote\"**  then click `Create Remote Repository`\n",
@@ -209,9 +210,10 @@
         "    snapshot_download(repo_id=model_name, allow_patterns=[weights, \"mlops.zip\"], local_dir=\".\")\n",
         "except HfHubHTTPError as e:\n",
         "    print(e)\n",
-        "# unpack the other course materials and remove the default folder by colab\n",
-        "!unzip mlops.zip\n",
-        "!rm -rf sample_data"
+        "else:\n",
+        "    # unpack the other course materials and remove the default folder by colab\n",
+        "    !unzip mlops.zip\n",
+        "    !rm -rf sample_data"
       ]
     },
     {
@@ -852,7 +854,7 @@
         "    return img\n",
         "\n",
         "\n",
-        "def analze_results(results):\n",
+        "def analze_results(results, photo):\n",
         "\n",
         "    with open(config_file, 'r') as f:\n",
         "        config = json.load(f)\n",
@@ -869,7 +871,7 @@
         "    # Main processing loop\n",
         "    target_detected = False\n",
         "\n",
-        "    frame = cv2.imread('photo.jpg')\n",
+        "    frame = cv2.imread(photo)\n",
         "\n",
         "    for result in results:\n",
         "        box = result[\"box\"]\n",
@@ -935,8 +937,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = send_image_to_qwak('photo.jpg') # change to results = send_image_to_qwak('tom.jpg') if you wish to use Tom's picture\n",
-        "analze_results(results)"
+        "photo = \"model/main/img/tom.jpg\" # change to photo = \"model/main/img/tom.jpg\" if you wish to use Tom's picture\n",
+        "results = send_image_to_qwak(photo) \n",
+        "analze_results(results, photo)"
       ]
     },
     {
