--- a/mlops-training/mlops_course.ipynb
+++ b/mlops-training/mlops_course.ipynb
@@ -937,7 +937,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "photo = \"model/main/img/tom.jpg\" # change to photo = \"model/main/img/tom.jpg\" if you wish to use Tom's picture\n",
+        "photo = \"photo.jpg\" # change to photo = \"model/main/img/tom.jpg\" if you wish to use Tom's picture\n",
         "results = send_image_to_qwak(photo) \n",
         "analze_results(results, photo)"
       ]
