--- a/mlops-training/mlops_course.ipynb
+++ b/mlops-training/mlops_course.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "✨ <font color=\"#f8c76b\"> TASK </font> ✨\n",
         "\n",
-        "1. Log in to the Artifactory training instance here: https://mlops17234464260.jfrog.io/\n",
+        "1. Log in to the Artifactory training instance here: https://swampup17242481110.jfrog.io/\n",
         "2. From the projects dropdown list, select your project (\"mlops-userx\")\n",
         "![](https://drive.google.com/uc?id=1U8vtNVB01E3xK2dGIAe0oyxNEnPRA8-d)\n",
         "3. Navigate to *Administration --> Repositories*.\n",
@@ -92,7 +92,7 @@
         "# Replace the <IDENTITY-TOKEN> placeholder with the token you generated in the JFrog Platform SetMeUp.\n",
         "%env HF_TOKEN=<IDENTITY-TOKEN>\n",
         "\n",
-        "%env HF_ENDPOINT=https://mlops17234464260.jfrog.io/artifactory/api/huggingfaceml/mlops-$userid-hf-remote\n",
+        "%env HF_ENDPOINT=https://swampup17242481110.jfrog.io/artifactory/api/huggingfaceml/mlops-$userid-hf-remote\n",
         "\n",
         "%env HF_HUB_ETAG_TIMEOUT=86400"
       ]
@@ -112,7 +112,7 @@
         "\n",
         "✨ <font color=\"#f8c76b\"> TASK </font> ✨\n",
         "\n",
-        "1. In Artifactory, go to our pypi repository: https://mlops17234464260.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
+        "1. In Artifactory, go to our pypi repository: https://swampup17242481110.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
         "2. Click `Set Me Up` in the top bar, enter your Artifactory password then click `Generate Token & Create Instructions`. Then, click the `Install` tab.\n",
         "3. Copy the URL from the value of index-url (starting with \"https://...\")\n",
         "![](https://drive.google.com/uc?id=1Y6AiOkyb4P3EUg0YrLpHU-HSg7-2g4cu)\n",
@@ -228,7 +228,7 @@
         "\n",
         "On the Artifactory training instance, navigate to your newly created *remote HuggingfaceML repository*.\n",
         "\n",
-        "Or, Here is a direct link (replace x with your user number):  https://mlops17234464260.jfrog.io/artifactory/mlops-userx-hf-remote/"
+        "Or, Here is a direct link (replace x with your user number):  https://swampup17242481110.jfrog.io/artifactory/mlops-userx-hf-remote/"
       ]
     },
     {
@@ -458,7 +458,7 @@
         "For your convenience, we've already created a policy and a watch, so just adding your repository will be enough to kick off scanning. \n",
         "You can view the details here:\n",
         "\n",
-        "https://mlops17234464260.jfrog.io/ui/admin/xray/policiesGovernance/policies/edit/block-malicious-models?projectKey=mlops-userx"
+        "https://swampup17242481110.jfrog.io/ui/admin/xray/policiesGovernance/policies/edit/block-malicious-models?projectKey=mlops-userx"
       ]
     },
     {
@@ -496,7 +496,7 @@
         "\n",
         "Navigate to your project's scans list (**remember to replace x with your student id**)\n",
         "\n",
-        "https://mlops17234464260.jfrog.io/ui/scans-list/repositories/mlops-userx-hf-remote-cache/scan-descendants?projectKey=mlops-userx"
+        "https://swampup17242481110.jfrog.io/ui/scans-list/repositories/mlops-userx-hf-remote-cache/scan-descendants?projectKey=mlops-userx"
       ]
     },
     {
@@ -652,7 +652,7 @@
         "%env HF_TOKEN=<IDENTITY-TOKEN>\n",
         "\n",
         "# Replace the <PATH> placeholder with the path to your ML Model Management repository in Artifactory, found in the JFrog Platform SetMeUp.\n",
-        "%env HF_ENDPOINT=https://mlops17234464260.jfrog.io/artifactory/api/huggingfaceml/mlops-$userid-hf-local\n",
+        "%env HF_ENDPOINT=https://swampup17242481110.jfrog.io/artifactory/api/huggingfaceml/mlops-$userid-hf-local\n",
         "\n",
         "%env HF_HUB_DOWNLOAD_TIMEOUT=86400\n",
         "%env HF_HUB_ETAG_TIMEOUT=86400"
