--- a/mlops-training/mlops_course.ipynb
+++ b/mlops-training/mlops_course.ipynb
@@ -903,7 +903,7 @@
         "    img_ndarray = np.array(image_rgb)\n",
         "    img_list = img_ndarray.tolist()\n",
         "\n",
-        "    client = QwakClient(model_id=\"yolo_test_2\")\n",
+        "    client = QwakClient(model_id=\"frog_factor_authenticator\")\n",
         "\n",
         "    response = client.predict(img_list)\n",
         "\n",
