--- a/JFTD-109-End-to-End MLOps Workflow Builds - Secure and Efficient/mlops_course.ipynb
+++ b/JFTD-109-End-to-End MLOps Workflow Builds - Secure and Efficient/mlops_course.ipynb
@@ -755,9 +755,26 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "\n",
+        "# Set your tokens as Python variables\n",
+        "# Get environment variables\n",
+        "token = os.getenv(\"HF_TOKEN\")\n",
+        "endpoint = os.getenv(\"HF_ENDPOINT\")\n",
+        "\n",
+        "\n",
+        "# Define the model ID\n",
         "model_id = f\"frog_factor_authenticator_{userid}\"\n",
-        "!qwak models create \"{model_id}\" --project $userid       \n",
-        "!qwak models build --model-id $model_id ./model --base-image 'public.ecr.aws/w8k8y6b6/qwak-base:0.0.14-gpu-opencv' --gpu-compatible"
+        "\n",
+        "!qwak models create \"{model_id}\" --project {userid}\n",
+        "\n",
+        "# Build the shell command using Python string interpolation\n",
+        "command = f\"qwak models build --model-id {model_id} ./model --base-image 'public.ecr.aws/w8k8y6b6/qwak-base:0.0.14-gpu-opencv' --gpu-compatible -E HF_TOKEN={token} -E HF_ENDPOINT={endpoint}\"\n",
+        "\n",
+        "print(command)\n",
+        "\n",
+        "# Execute the command\n",
+        "!{command}"
       ]
     },
     {
@@ -976,7 +993,8 @@
         "2. Select your project and click your model.\n",
         "3. Under the *Builds* tab, identify your build and ensure it finished building successfully, Then click `Deploy`. \n",
         "4. Select `Realtime`.\n",
-        "5. On the next screen, click `Deploy Model`. No need to change anything.\n"
+        "5. On the next screen, expand the `Advanced Settings` tab and set the timeout to 50000.\n"
+        "6. click `Deploy Model`.\n"
       ]
     }
   ],
