--- a/JFTD-109-End-to-End MLOps Workflow Builds - Secure and Efficient/mlops_course.ipynb
+++ b/JFTD-109-End-to-End MLOps Workflow Builds - Secure and Efficient/mlops_course.ipynb
@@ -993,7 +993,7 @@
         "2. Select your project and click your model.\n",
         "3. Under the *Builds* tab, identify your build and ensure it finished building successfully, Then click `Deploy`. \n",
         "4. Select `Realtime`.\n",
-        "5. On the next screen, expand the `Advanced Settings` tab and set the timeout to 50000.\n"
+        "5. On the next screen, expand the `Advanced Settings` tab and set the timeout to 50000.\n",
         "6. click `Deploy Model`.\n"
       ]
     }
