--- a/JFTD-109-End-to-End MLOps Workflow Builds - Secure and Efficient/mlops_course.ipynb
+++ b/JFTD-109-End-to-End MLOps Workflow Builds - Secure and Efficient/mlops_course.ipynb
@@ -968,7 +968,7 @@
         "✨ <font color=\"#f8c76b\"> TASK </font> ✨\n",
         "\n",
         "1. In the [Qwak Platform](https://app.qwak.ai/) Navigate to *Models*.\n",
-        "2. Select \"yolo\" project and click \"yolo-test-2\"\n",
+        "2. Select \"Workshop\" project and click \"frog_factor_authenticator\"\n",
         "3. Monitor the status under the \"overview\" tab."
       ]
     },
